--- a/.github/workflows/git.yml
+++ b/.github/workflows/git.yml
@@ -1,3 +1,29 @@
 name: Sanjeev
 description: 'Just practise purpose i have created this yml file'
 author: 'sanjeev'
+-
+
+  on:
+    workflow_dispatch:
+
+permissions:
+  contents: write
+  pull-requests: write  
+
+jobs:
+  try:
+    runs-on: ubuntu-latest
+@@ -27,7 +30,12 @@ jobs:
+          release_name: ReleaseName
+          draft: false
+          prerelease: false
+
+  api:   
+    runs-on: ubuntu-latest  
+    permissions:
+      issues: write
+      packages: 
+    steps:
+      - name: Create issue using REST API
+        run: |
+          curl --request POST \
