--- a/.github/workflows/git.yml
+++ b/.github/workflows/git.yml
@@ -1,9 +1,8 @@
-name: Sanjeev
+name: GITHUB_TOKEN examples
 
--
 
-  on:
-    workflow_dispatch:
+on:
+  workflow_dispatch:
 
 permissions:
   contents: write
